@define no longer implicitly binds into the top-level.

@const no longer exists (it still accepted as whitespace character)

the functions defined by @record are bound to the innermost scope,
  unless there are already bindings

veclen no longer exists (use always-equivalent length)

variables declared with @global and @local are initially bound to nil
  (previously they were bound to the undefined value)

the value nil is now false in conditional context (previously true)

the value and type null have been removed

the value and type undefined have been removed

@defloc is like @define but ensures the binding is @local

the functions nsenumsym, nsenumtype, nslookaddr have been removed;
instead, reference the name space methods directly.

the augmented cast assignment operators ()= and {}= have been removed.

@typename is a new syntactic constructor replacement for @typeof

@typeof is now like sizeof on unqualified types: they are resolved in litdom.

enum constants defined in @names forms may be
referenced in subsequent array element expressions
(possibly others .... e.g., attr?)
